# ani_file

./: .gitignore  LICENSE  README.md  ani_file.py  pyproject.toml  test.py
ani_file/: ani_file.py
src/ani_file/: Iconolatry.py  __init__.py  ani_file.py
test_res/: lamy_wait.ani
