[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ani_file"
version = "0.0.1"
authors = [
  { name="HoangEevee", email="nguyenquochoang2806@gmail.com" },
]
description = "ani file reader and writer"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/HoangEevee/ani_file"